Added text messages

--- a/appinfo.json
+++ b/appinfo.json
@@ -9,6 +9,12 @@
     "resources": {
         "media": [
             {
+                "characterRegex": "[A-Za-z!]",
+                "file": "fonts/traphouse.ttf",
+                "name": "FONT_TEXT_36",
+                "type": "font"
+            },
+            {
                 "characterRegex": "[0-9:]",
                 "file": "fonts/LondonMM.ttf",
                 "name": "FONT_TIME_16",
